# hw1

./: .travis.yaml  .travis.yml  deploy.txt  makedeploy.py
hw1/: .travis.yaml  CMakeLists.txt
hw1/helloworld/libhelloshared/: hello_shared.h
hw1/helloworld/libhellostatic/: hello_static.cpp  hello_static.h
hw1/libhellostatic/: CMakeLists.txt  version.h
hw1/source/: version.h.in
part1/: CMakeLists.txt  makedeploy.py
part1/helloworld/: .travis.yaml  CMakeLists.txt
part1/helloworld/libhelloshared/: CMakeLists.txt  hello_shared.cpp  hello_shared.h
part1/helloworld/libhellostatic/: CMakeLists.txt  hello_static.h  version.h  version.h.in
part1/helloworld/source/: CMakeLists.txt  helloworld.cpp  version.h.in
part1/helloworld/test/: CMakeLists.txt  test_version.cpp
part1/libhelloshared/: CMakeLists.txt
part1/libhellostatic/: hello_static.cpp  version.h.in
part1/test/: CMakeLists.txt  test_version.cpp
part2/: CMakeLists.txt  ip_filter.cpp  trim.h
part2/tests/: empty_strings.tsv  invalid_ip_line_1.tsv  invalid_ip_line_14.tsv  invalid_ip_line_3.tsv
